5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1785_1593.log
== TEST (2019-05-30 11:06:12) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
media = 0
while(i < size(v)):
	media = media + (v[i]/(i + 1))
	i = i + 1
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:06:39) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
media = 0
while(i < size(v)):
	media = media + (v[i]/(i + 1))
	i = i + 1
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:07:09) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
media = 0
while(i < size(v)):
	media = media + (v[i]/(i + 1))
	i = i + 1
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:09:01) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
while(i < size(v)):
	m = m + (v[i]*(i + 1)
	i = i + 1
media = m/size(v)
print(round(media, 2))
-- ERROR:
File "XXXX", line 9
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:09:08) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
while(i < size(v)):
	m = m + (v[i]*(i + 1))
	i = i + 1
media = m/size(v)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:10:38) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
media = 0
while(i < size(v)):
	m = m + (v[i]*(i + 1))
	media = media + m/(size(v))
	i = i + 1
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:12:39) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
media = 0
while(i < size(v)):
	m = m + (v[i]*(i + 1))
	i = i + 1
media = m/(size(v)*i)


print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:12:48) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
media = 0
while(i < size(v)):
	m = m + (v[i]*(i + 1))
	i = i + 1
media = m/(size(v)*i)


print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:12:55) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
media = 0
while(i < size(v)):
	m = m + (v[i]*(i + 1))
	i = i + 1
media = m/(size(v)*i)


print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:22:04) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
c = 0
while(i < size(v)):
	m = m + (v[i]*(i + 1))
	c = c + i
	i = i + 1
print(m/c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:23:38) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
c = 0
while(i < size(v)):
	m = (m + (v[i]*(i + 1)))/(c + i)
	i = i + 1
print(m/c)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:23:43) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
c = 0
while(i < size(v)):
	m = (m + (v[i]*(i + 1)))/(c + i)
	i = i + 1
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:23:43) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
c = 0
while(i < size(v)):
	m = (m + (v[i]*(i + 1)))/(c + i)
	i = i + 1
print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:25:30) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
while(i < size(v)):
	m = m + (v[i]*(i + 1))
	i = i + 1
media = m/(size(v)*i)
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:25:52) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
while(i < size(v)):
	m = m + (v[i]*(i + 1))
	i = i + 1
media = m/(size(v)*i)
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:26:57) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
while(i < size(v)):
	m = m + (v[i]*(i + 1))
	c = c + i
	i = i + 1
media = m/c
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:27:13) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
c = 0
while(i < size(v)):
	m = m + (v[i]*(i + 1))
	c = c + i
	i = i + 1
media = m/c
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:29:56) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
c = 0
while(i < size(v)):
	m = m + (v[i]*(i + 1))
	c = c + i * (i+1)
	i = i + 1
media(m/c)
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:30:17) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
c = 0
while(i < size(v)):
	m = m + (v[i]*(i + 1))
	c = c + i * (i+1)
	i = i + 1
media=(m/c)
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:32:27) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
c = 1
while(i < size(v)):
	p = i + 1
	m = m + (v[i]*p)
	c = c * p
	i = i + 1
media = m/c
print(media)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:32:48) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
c = 1
while(i < size(v)):
	p = i + 1
	m = m + (v[i]*p)
	c = c * p
	i = i + 1
media = m/c
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:33:13) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
c = 1
while(i < size(v)):
	p = i + 1
	m = m + (v[i]*p)
	c = c * p
	i = i + 1
media = m/c
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:33:33) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
c = 1
while(i < size(v)):
	p = i + 1
	m = m + (v[i]*p)
	c = c * p
	i = i + 1
media = m/c
print(round(media, 2))
-- EXECUTION TIME:
0.52995
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
1.92
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
0.44
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
3.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:33:35) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
c = 1
while(i < size(v)):
	p = i + 1
	m = m + (v[i]*p)
	c = c * p
	i = i + 1
media = m/c
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:35:56) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
c = 1
x = 0
while(i < size(v)):
	p = i + 1
	m = m + (v[i]*p)
	x = x + p*p
	i = i + 1
media = m/x
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:37:37) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
while(i < size(v)):
	
	m = m + (v[i]*(i + 1))
	c = c + (i + 1)*(i + 1)
	i = i + 1

media = m/c
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:37:53) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
c = 0
while(i < size(v)):
	
	m = m + (v[i]*(i + 1))
	c = c + (i + 1)*(i + 1)
	i = i + 1

media = m/c
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:39:27) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0
c = 0
while(i < size(v)):
	
	m = m + (v[i]*(i + 1))
	c =(1 + i)*(i + 1)
	c = c * c
	i = i + 1

media = m/c
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:41:17) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0

while(i < size(v)):
	
	m = m + (v[i]*(i + 1))
	i = i + 1
	
r = 0
c = 1
while(r < size(v)):
	c = c*(r +1)
	r = r + 1

	
media = m/c
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:41:27) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0

while(i < size(v)):
	
	m = m + (v[i]*(i + 1))
	i = i + 1
	
r = 0
c = 1
while(r < size(v)):
	c = c*(r +1)
	r = r + 1

	
media = m/c
print(round(media, 2))
-- EXECUTION TIME:
0.413143
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
1.92
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
0.44
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
3.8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:41:32) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0

while(i < size(v)):
	
	m = m + (v[i]*(i + 1))
	i = i + 1
	
r = 0
c = 1
while(r < size(v)):
	c = c*(r +1)
	r = r + 1

	
media = m/c
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:42:47) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0

while(i < size(v)):
	
	m = m + (v[i]*(i + 1))
	i = i + 1
	
r = 0
c = 1
while(r < size(v)):
	c = c*(r + 1)
	r = r + 1

	
media = m/c
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:10) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0

while(i < size(v)):
	
	m = m + (v[i]*(i + 1))
	i = i + 1
	
r = 0
c = 1
while(r < size(v)):
	c = c*(r + 1)
	r = r + 1

	
media = m/c
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:48) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0

while(i < size(v)):
	
	m = m + (v[i]*(i + 1))
	i = i + 1
	
r = 0
c = 1
while(r < size(v)):
	c = c*(r + 1)
	r = r + 1

	
media = m/c
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:43:55) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0

while(i < size(v)):
	
	m = m + (v[i]*(i + 1))
	i = i + 1
	
r = 0
c = 1
while(r < size(v)):
	c = c*(r + 1)
	r = r + 1

	
media = m/c
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:44:01) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0

while(i < size(v)):
	
	m = m + (v[i]*(i + 1))
	i = i + 1
	
r = 0
c = 1
while(r < size(v)):
	c = c*(r + 1)
	r = r + 1

	
media = m/c
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:46:04) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0

while(i < size(v)):
	
	m = m + (v[i]*(i + 1))
	i = i + 1
	
r = 0
c = 1
while(r < size(v)):
	c = c  + (r + 1)
	r = r + 1

	
media = m/c
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:47:12) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0

while(i < size(v)):
	
	m = m + (v[i]*(i + 1))
	i = i + 1
	
r = 0
c = 1
while(r < size(v)):
	c = c  + (r + 1)
	r = r + 1

	
media = m/c
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:48:51) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0

while(i < size(v)):
	
	m = m + (v[i]*(i + 1))
	i = i + 1
	
r = 0
c = 0
while(r < size(v)):
	c = c  + (r + 1)
	r = r + 1

media = m/c
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:48:59) 
-- CODE:
from numpy import *

v = array(eval(input("Insira as notas: ")))

i = 0
m = 0

while(i < size(v)):
	
	m = m + (v[i]*(i + 1))
	i = i + 1
	
r = 0
c = 0
while(r < size(v)):
	c = c  + (r + 1)
	r = r + 1

media = m/c
print(round(media, 2))
-- EXECUTION TIME:
0.341353
-- TEST CASE 1:
---- input:
 [3.5,5.6,7.76,2]
---- correct output:
4.6
---- user output:
4.6
-- TEST CASE 2:
---- input:
[2.0,2.0,1.5,0]
---- correct output:
1.05
---- user output:
1.05
-- TEST CASE 3:
---- input:
[2.0,2.8]
---- correct output:
2.53
---- user output:
2.53
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
